nenolod     2006/07/02 00:57:52 UTC	(20060702-5642)
  Log:
  - remove unrealircd support -- it's never really worked very well, and nobody seems to care enough about it
  

  Changes:	Modified:
  +0 -1		trunk/dist/example.conf (File Modified) 
  +0 -1		trunk/dist/example.userserv.conf (File Modified) 
  +0 -5		trunk/doc/IRCD (File Modified) 
  +1 -2		trunk/protocol/Makefile.in (File Modified) 
  +0 -940	trunk/protocol/unreal.c (File Deleted) 


jilles      2006/07/02 00:48:37 UTC	(20060702-5640)
  Log:
  Add some consts.
  There will remain a warning about const in src/cmode.c which is hard to remove.
  

  Changes:	Modified:
  +9 -10	trunk/include/extern.h (File Modified) 
  +8 -8		trunk/src/cmode.c (File Modified) 
  +11 -11	trunk/src/node.c (File Modified) 


jilles      2006/07/02 00:21:54 UTC	(20060702-5638)
  Log:
  Use channel_mode_va() to make the code less ugly.
  

  Changes:	Modified:
  +2 -8		trunk/protocol/inspircd.c (File Modified) 


jilles      2006/07/02 00:08:33 UTC	(20060702-5636)
  Log:
  ChanServ UNBAN: remove unnecessary additional declaration of chanban_t *cb (2 times).
  

  Changes:	Modified:
  +2 -2		trunk/modules/chanserv/ban.c (File Modified) 


jilles      2006/07/02 00:05:59 UTC	(20060702-5634)
  Log:
  flatfile_db_save(): cast argument to %ld from time_t to long
  

  Changes:	Modified:
  +1 -1		trunk/backend/flatfile.c (File Modified) 


jilles      2006/07/01 23:55:36 UTC	(20060701-5632)
  Log:
  Add a comment to hook_channel_req_t, it is not
  possible to use mychan_t here.
  

  Changes:	Modified:
  +2 -1		trunk/include/atheme.h (File Modified) 


jilles      2006/07/01 23:52:50 UTC	(20060701-5630)
  Log:
  Make mc in hook_channel_req_t of type struct mychan_ * instead of void *.
  

  Changes:	Modified:
  +1 -2		trunk/include/atheme.h (File Modified) 


jilles      2006/07/01 23:38:42 UTC	(20060701-5628)
  Log:
  Add callbacks for non-standard type C channel modes
  (forwarding, join throttling, etc).
  

  Changes:	Modified: