@@ -7,7 +7,7 @@
  *
  * Items marked with "(*)" are reconfigurable at runtime via REHASH.
  *
- * $Id: example.userserv.conf 5642 2006-07-02 00:57:52Z nenolod $
+ * $Id: example.userserv.conf 5646 2006-07-02 01:38:39Z jilles $
  */
 
 /* Protocol module.
@@ -423,7 +423,7 @@ serverinfo {
 
 	/* casemapping
 	 * Specify the casemapping to use. Almost all TSora (and any that follow
-	 * the RFC correctly) ircds will use rfc1459 casemapping. Bahamut, Unreal,
+	 * the RFC correctly) ircds will use rfc1459 casemapping. Bahamut
 	 * and other ``Dalnet'' ircds will use ascii casemapping.
 	 * Valid values are: rfc1459, ascii.
 	 */
